[package]
name = "undead-germ4ns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.8.1"
rand = "0.8.5"
wasm-bindgen = "0.2.83"

[workspace]
resolver = "2" #Important! wpgu Bevy needs this flag